--- a/Lends/Views/Addresses/Index.cshtml
+++ b/Lends/Views/Addresses/Index.cshtml
@@ -4,44 +4,45 @@
     ViewData["Title"] = "Endereços";
 }
 
-<h1>Endereços</h1>
-
-<p>
-    <a asp-action="Create">Adicionar Endereço</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ZipCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Number)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AdditionalInformation)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Number)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdditionalInformation)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="jumbotron">
+    <h1 class="h1-subcategories">Endereços</h1>
+    <p class="buttons-clients">
+        <a asp-action="Create" class="btn btn-primary add-producer">Adicionar endereço</a>
+    </p>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">
+                    @Html.DisplayNameFor(model => model.ZipCode)
+                </th>
+                <th scope="col">
+                    @Html.DisplayNameFor(model => model.Number)
+                </th>
+                <th scope="col">
+                    @Html.DisplayNameFor(model => model.AdditionalInformation)
+                </th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ZipCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Number)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AdditionalInformation)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary button-size">Editar</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-warning button-size">Detalhes</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger button-size">Deletar</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
+</div>
