--- a/Lends/Views/Clients/Create.cshtml
+++ b/Lends/Views/Clients/Create.cshtml
@@ -4,59 +4,59 @@
     ViewData["Title"] = "Criar";
 }
 
-<h1>Criar novo cliente</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Client.Name" class="control-label"></label>
-                <input asp-for="Client.Name" class="form-control" />
-                <span asp-validation-for="Client.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Email" class="control-label"></label>
-                <input asp-for="Client.Email" class="form-control" />
-                <span asp-validation-for="Client.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Cellphone" class="control-label"></label>
-                <input asp-for="Client.Cellphone" class="form-control" />
-                <span asp-validation-for="Client.Cellphone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.Cpf" class="control-label"></label>
-                <input asp-for="Client.Cpf" class="form-control" />
-                <span asp-validation-for="Client.Cpf" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Client.RegistrationDate" class="control-label"></label>
-                <input asp-for="Client.RegistrationDate" class="form-control" />
-                <span asp-validation-for="Client.RegistrationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address.ZipCode" class="control-label"></label>
-                <input asp-for="Address.ZipCode" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Address.Number" class="control-label"></label>
-                <input asp-for="Address.Number" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Address.AdditionalInformation" class="control-label"></label>
-                <input asp-for="Address.AdditionalInformation" class="form-control" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Criar" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="jumbotron jumbotron-form">
+    <h1 class="h1-subcategories">Criar Cliente</h1>
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Client.Name" class="control-label"></label>
+                    <input asp-for="Client.Name" class="form-control" />
+                    <span asp-validation-for="Client.Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Email" class="control-label"></label>
+                    <input asp-for="Client.Email" class="form-control" />
+                    <span asp-validation-for="Client.Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Cellphone" class="control-label"></label>
+                    <input asp-for="Client.Cellphone" class="form-control" />
+                    <span asp-validation-for="Client.Cellphone" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.Cpf" class="control-label"></label>
+                    <input asp-for="Client.Cpf" class="form-control" />
+                    <span asp-validation-for="Client.Cpf" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Client.RegistrationDate" class="control-label"></label>
+                    <input asp-for="Client.RegistrationDate" class="form-control" />
+                    <span asp-validation-for="Client.RegistrationDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Address.ZipCode" class="control-label"></label>
+                    <input asp-for="Address.ZipCode" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Address.Number" class="control-label"></label>
+                    <input asp-for="Address.Number" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Address.AdditionalInformation" class="control-label"></label>
+                    <input asp-for="Address.AdditionalInformation" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Criar" class="btn btn-primary btn-create" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Retornar</a>
+    <div>
+        <a asp-action="Index" class="btn btn-link">Retornar</a>
+    </div>
 </div>
 
 @section Scripts {
